crates/pgls_cli/tests/snapshots/assert_dblint__dblint_detects_issues_snapshot.snap
---
source: crates/pgls_cli/tests/assert_dblint.rs
expression: output
snapshot_kind: text
---
status: success
stdout:
Command completed in <duration>.
stderr:
splinter/performance/noPrimaryKey ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Table \`public.test_no_pk\` does not have a primary key
  
  Detects if a table does not have a primary key. Tables without a primary key can be inefficient to interact with at scale.
  
  i table: public.test_no_pk
  
  i Remediation: https://supabase.com/docs/guides/database/database-linter?lint=0004_no_primary_key
