crates/pgls_cli/tests/snapshots/assert_dblint__dblint_empty_database_snapshot.snap
---
source: crates/pgls_cli/tests/assert_dblint.rs
expression: output
snapshot_kind: text
---
status: success
stdout:
Warning: Deprecated config filename detected. Use 'postgres-language-server.jsonc'.

Command completed in <duration>.
stderr:
