crates/pgls_cli/tests/snapshots/assert_dblint__dblint_no_database_snapshot.snap
---
source: crates/pgls_cli/tests/assert_dblint.rs
expression: normalized
snapshot_kind: text
---
status: success
stdout:
Warning: Deprecated config filename detected. Use 'postgres-language-server.jsonc'.

Command completed in <duration>.
stderr:
